gen/FibonacciParser.java
// Generated from C:/Programacion/Universidad/Procesadores del lenguaje/Codigo/src\FibonacciParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FibonacciParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PR_BEGIN=1, PR_END=2, PR_WHILE=3, PR_FUNCTION=4, PR_TIPO=5, PR_INCLUDE=6, 
		PR_DEVOLVER=7, PR_VOID=8, PR_IF=9, PR_THEN=10, PR_ELSE=11, PR_ENDIF=12, 
		COMENTARIOBLOQUE=13, COMENTARIOLINEA=14, SUMA=15, TRUE=16, FALSE=17, RESTA=18, 
		MULT=19, DIV=20, ASIGNAR=21, OPLOGICOS=22, COMILLAS=23, COMA=24, CI=25, 
		CD=26, NUM_ELEM_ARRAY=27, DOSPUNTOS=28, FINALSENTENCIA=29, IDENTIF=30, 
		PI=31, PD=32, NUMERO=33, CADENA=34, TIPO_CADENA=35, WS=36, NEW_LINE=37;
	public static final int
		RULE_prog = 0, RULE_incluir = 1, RULE_definicionfuncion = 2, RULE_bifurcacion = 3, 
		RULE_sentencia = 4, RULE_declaracion = 5, RULE_asignacion = 6, RULE_llamadafuncion = 7, 
		RULE_expr = 8, RULE_parametros = 9, RULE_argumentos = 10, RULE_si = 11, 
		RULE_sino = 12, RULE_nElemArray = 13, RULE_array = 14, RULE_retornar = 15, 
		RULE_mientras = 16, RULE_variable = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "incluir", "definicionfuncion", "bifurcacion", "sentencia", "declaracion", 
			"asignacion", "llamadafuncion", "expr", "parametros", "argumentos", "si", 
			"sino", "nElemArray", "array", "retornar", "mientras", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'end'", "'while'", "'function'", null, "'include'", 
			"'devolver'", "'void'", "'if'", "'then'", "'else'", "'endif'", null, 
			null, "'+'", "'true'", "'false'", "'-'", "'*'", "'/'", "':='", null, 
			"'\"'", "','", "'['", "']'", null, "':'", "';'", null, "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PR_BEGIN", "PR_END", "PR_WHILE", "PR_FUNCTION", "PR_TIPO", "PR_INCLUDE", 
			"PR_DEVOLVER", "PR_VOID", "PR_IF", "PR_THEN", "PR_ELSE", "PR_ENDIF", 
			"COMENTARIOBLOQUE", "COMENTARIOLINEA", "SUMA", "TRUE", "FALSE", "RESTA", 
			"MULT", "DIV", "ASIGNAR", "OPLOGICOS", "COMILLAS", "COMA", "CI", "CD", 
			"NUM_ELEM_ARRAY", "DOSPUNTOS", "FINALSENTENCIA", "IDENTIF", "PI", "PD", 
			"NUMERO", "CADENA", "TIPO_CADENA", "WS", "NEW_LINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FibonacciParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FibonacciParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<IncluirContext> incluir() {
			return getRuleContexts(IncluirContext.class);
		}
		public IncluirContext incluir(int i) {
			return getRuleContext(IncluirContext.class,i);
		}
		public List<TerminalNode> FINALSENTENCIA() { return getTokens(FibonacciParser.FINALSENTENCIA); }
		public TerminalNode FINALSENTENCIA(int i) {
			return getToken(FibonacciParser.FINALSENTENCIA, i);
		}
		public List<DefinicionfuncionContext> definicionfuncion() {
			return getRuleContexts(DefinicionfuncionContext.class);
		}
		public DefinicionfuncionContext definicionfuncion(int i) {
			return getRuleContext(DefinicionfuncionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(40);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PR_INCLUDE:
					{
					setState(36);
					incluir();
					setState(37);
					match(FINALSENTENCIA);
					}
					break;
				case PR_FUNCTION:
					{
					setState(39);
					definicionfuncion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PR_FUNCTION || _la==PR_INCLUDE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncluirContext extends ParserRuleContext {
		public TerminalNode PR_INCLUDE() { return getToken(FibonacciParser.PR_INCLUDE, 0); }
		public TerminalNode IDENTIF() { return getToken(FibonacciParser.IDENTIF, 0); }
		public IncluirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_incluir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterIncluir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitIncluir(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitIncluir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncluirContext incluir() throws RecognitionException {
		IncluirContext _localctx = new IncluirContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_incluir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(PR_INCLUDE);
			setState(45);
			match(IDENTIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionfuncionContext extends ParserRuleContext {
		public TerminalNode PR_FUNCTION() { return getToken(FibonacciParser.PR_FUNCTION, 0); }
		public TerminalNode IDENTIF() { return getToken(FibonacciParser.IDENTIF, 0); }
		public TerminalNode PI() { return getToken(FibonacciParser.PI, 0); }
		public ArgumentosContext argumentos() {
			return getRuleContext(ArgumentosContext.class,0);
		}
		public TerminalNode PD() { return getToken(FibonacciParser.PD, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(FibonacciParser.DOSPUNTOS, 0); }
		public TerminalNode PR_VOID() { return getToken(FibonacciParser.PR_VOID, 0); }
		public TerminalNode PR_BEGIN() { return getToken(FibonacciParser.PR_BEGIN, 0); }
		public TerminalNode PR_END() { return getToken(FibonacciParser.PR_END, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<BifurcacionContext> bifurcacion() {
			return getRuleContexts(BifurcacionContext.class);
		}
		public BifurcacionContext bifurcacion(int i) {
			return getRuleContext(BifurcacionContext.class,i);
		}
		public RetornarContext retornar() {
			return getRuleContext(RetornarContext.class,0);
		}
		public DefinicionfuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionfuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterDefinicionfuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitDefinicionfuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitDefinicionfuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionfuncionContext definicionfuncion() throws RecognitionException {
		DefinicionfuncionContext _localctx = new DefinicionfuncionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicionfuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(47);
			match(PR_FUNCTION);
			setState(48);
			match(IDENTIF);
			setState(49);
			match(PI);
			setState(50);
			argumentos();
			setState(51);
			match(PD);
			setState(52);
			match(DOSPUNTOS);
			setState(53);
			match(PR_VOID);
			setState(54);
			match(PR_BEGIN);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PR_WHILE) | (1L << PR_TIPO) | (1L << PR_IF) | (1L << IDENTIF))) != 0)) {
				{
				setState(57);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PR_TIPO:
				case IDENTIF:
					{
					setState(55);
					sentencia();
					}
					break;
				case PR_WHILE:
				case PR_IF:
					{
					setState(56);
					bifurcacion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PR_DEVOLVER) {
				{
				setState(62);
				retornar();
				}
			}

			setState(65);
			match(PR_END);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BifurcacionContext extends ParserRuleContext {
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public BifurcacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bifurcacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterBifurcacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitBifurcacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitBifurcacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BifurcacionContext bifurcacion() throws RecognitionException {
		BifurcacionContext _localctx = new BifurcacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bifurcacion);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PR_WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				mientras();
				}
				break;
			case PR_IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				si();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public TerminalNode FINALSENTENCIA() { return getToken(FibonacciParser.FINALSENTENCIA, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public LlamadafuncionContext llamadafuncion() {
			return getRuleContext(LlamadafuncionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentencia);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(71);
				asignacion();
				}
				break;
			case 2:
				{
				setState(72);
				declaracion();
				}
				break;
			case 3:
				{
				setState(73);
				llamadafuncion();
				}
				break;
			}
			setState(76);
			match(FINALSENTENCIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode PR_TIPO() { return getToken(FibonacciParser.PR_TIPO, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode NUM_ELEM_ARRAY() { return getToken(FibonacciParser.NUM_ELEM_ARRAY, 0); }
		public TerminalNode ASIGNAR() { return getToken(FibonacciParser.ASIGNAR, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(PR_TIPO);
			setState(79);
			variable();
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGNAR:
			case FINALSENTENCIA:
				{
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASIGNAR) {
					{
					setState(80);
					match(ASIGNAR);
					setState(81);
					expr(0);
					}
				}

				}
				break;
			case NUM_ELEM_ARRAY:
				{
				setState(84);
				match(NUM_ELEM_ARRAY);
				setState(85);
				match(ASIGNAR);
				setState(86);
				array();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode ASIGNAR() { return getToken(FibonacciParser.ASIGNAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			variable();
			setState(90);
			match(ASIGNAR);
			setState(91);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LlamadafuncionContext extends ParserRuleContext {
		public TerminalNode IDENTIF() { return getToken(FibonacciParser.IDENTIF, 0); }
		public TerminalNode PI() { return getToken(FibonacciParser.PI, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode PD() { return getToken(FibonacciParser.PD, 0); }
		public LlamadafuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamadafuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterLlamadafuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitLlamadafuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitLlamadafuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LlamadafuncionContext llamadafuncion() throws RecognitionException {
		LlamadafuncionContext _localctx = new LlamadafuncionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_llamadafuncion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(IDENTIF);
			setState(94);
			match(PI);
			setState(95);
			parametros();
			setState(96);
			match(PD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public LlamadafuncionContext llamadafuncion() {
			return getRuleContext(LlamadafuncionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode CADENA() { return getToken(FibonacciParser.CADENA, 0); }
		public TerminalNode NUMERO() { return getToken(FibonacciParser.NUMERO, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MULT() { return getToken(FibonacciParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(FibonacciParser.DIV, 0); }
		public TerminalNode SUMA() { return getToken(FibonacciParser.SUMA, 0); }
		public TerminalNode RESTA() { return getToken(FibonacciParser.RESTA, 0); }
		public TerminalNode OPLOGICOS() { return getToken(FibonacciParser.OPLOGICOS, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(99);
				llamadafuncion();
				}
				break;
			case 2:
				{
				setState(100);
				variable();
				}
				break;
			case 3:
				{
				setState(101);
				match(CADENA);
				}
				break;
			case 4:
				{
				setState(102);
				match(NUMERO);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(114);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(105);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(106);
						_la = _input.LA(1);
						if ( !(_la==MULT || _la==DIV) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(107);
						expr(6);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(108);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(109);
						_la = _input.LA(1);
						if ( !(_la==SUMA || _la==RESTA) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(110);
						expr(5);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(111);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(112);
						match(OPLOGICOS);
						setState(113);
						expr(4);
						}
						break;
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(FibonacciParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(FibonacciParser.COMA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FibonacciParserListener ) ((FibonacciParserListener)listener).exitParametros(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FibonacciParserVisitor ) return ((FibonacciParserVisitor<? extends T>)visitor).visitParametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIF) | (1L << NUMERO) | (1L << CADENA))) != 0)) {
				{
				setState(119);
				expr(0);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(120);
					match(COMA);
					{
					setState(121);
					expr(0);
					}
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
